--- a/cryptotrack/src/App.css
+++ b/cryptotrack/src/App.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  font-family: 'monospace';
   background-color: #1a1a1c;
   color: #fff;
 }
