--- a/cryptotrack/src/components/Coin.css
+++ b/cryptotrack/src/components/Coin.css
@@ -20,6 +20,10 @@
   min-width: 300px;
 }
 
+.coin-list {
+  margin-bottom: 30px;
+}
+
 .coin h1 {
   font-size: 16px;
   width: 150px;
@@ -33,6 +37,7 @@
 
 .coin-symbol {
   text-transform: uppercase;
+  font-size: 11px;
 }
 
 .coin-data {
@@ -51,12 +56,12 @@
 }
 
 .coin-market-cap-rank {
-  width: 30px;
+  width: 50px;
 }
 
-.coin-market-cap{
+/* .coin-market-cap{
   
-}
+} */
 
 .coin-percent {
   width: 80px;
