--- a/cryptotrack/src/components/CoinChart.css
+++ b/cryptotrack/src/components/CoinChart.css
@@ -1,7 +1,18 @@
 .coin-chart {
   height: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 70vw;
   margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  /* background-color: #ffffff; */
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  padding-bottom: 70px;
+  box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(255,255,255,0.19);
+}
+
+.history-buttons {
+  margin: 10px;
+  /* background-color: rgb(8, 135, 8); */
+  float: right;
 }
