--- a/cryptotrack/src/components/MainPage.css
+++ b/cryptotrack/src/components/MainPage.css
@@ -6,26 +6,42 @@
   color: #fff;
 }
 
+.nav-bar-first {
+  width: 1000px;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-bar-second {
+  width: 1000px;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
 
 .page-header {
-  margin-top: 32px;
-  margin-bottom: 32px;
-  float: left;
+  margin-left: 5px;
+  font-size: 24px;
+  font-weight: bold
 }
 
-.search-bar {
-  margin-bottom: 16px;
-  display: flex;
-  position: center;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
-}
+/* .search-bar {
+  
+} */
+
 .search-input {
-  padding-left: 16px;
+  padding-left: 12px;
   width: 300px;
-  height: 50px;
+  height: 30px;
   border-radius: 5px;
   background-image: #e2e2e2;
   color: #1a1a1c;
@@ -46,7 +62,7 @@
 }
 
 .coin-list-header {
-  background-color: grey;
+  background-color: #343a40;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -55,3 +71,24 @@
   margin-bottom: 20px;
   float: right;
 }
+
+.auth-buttons {
+  width: 1000px;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user-greetings {
+  display: flex;
+  align-items: center;
+}
+
+/* .login-button {
+}
+
+.logout-button {
+} */
