--- a/cryptotrack/src/App.css
+++ b/cryptotrack/src/App.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: sans-serif;
   /* font-family: 'monospace'; */
   color: #fff;
 }
