--- a/cryptotrack/src/components/CoinChart.css
+++ b/cryptotrack/src/components/CoinChart.css
@@ -1,11 +1,11 @@
 .coin-chart {
   height: 500px;
-  width: 70vw;
+  width: 1000px;
   margin: auto;
   margin-top: 50px;
   margin-bottom: 50px;
   /* background-color: #ffffff; */
-  border-radius: 4px;
+  border-radius: 2px;
   border: 1px solid #ffffff;
   padding-bottom: 70px;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(255,255,255,0.19);
@@ -13,6 +13,15 @@
 
 .history-buttons {
   margin: 10px;
-  /* background-color: rgb(8, 135, 8); */
+  background-color: #c0c0c0;
   float: right;
+}
+
+.active-button {
+  background-color: #42a4f5!important;
+}
+
+.regular-button {
+  background-color: transparent;
+  color: black!important;
 }
