--- a/cryptotrack/src/App.css
+++ b/cryptotrack/src/App.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  /* font-family: 'monospace'; */
+  font-family: 'Nunito Sans', 'Roboto', sans-serif;
   color: #fff;
 }
 
@@ -14,6 +14,3 @@ html {
   background-color: #252525
 }
 
-/* .main-app {
-  background-color: #1a1a1c;
-} */
