--- a/cryptotrack/src/components/MainPage.css
+++ b/cryptotrack/src/components/MainPage.css
@@ -2,23 +2,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 32px;
   color: #fff;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: solid 1px grey;
+  border-bottom: solid 1px grey;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .nav-bar-first {
   width: 1000px;
-  position: relative;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
-  border-top: solid 1px grey;
-  border-bottom: solid 1px grey;
 }
 
 .nav-bar-second {
@@ -29,7 +34,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 16px;
+  /* margin-top: 16px; */
   margin-bottom: 16px;
 }
 
@@ -62,8 +67,8 @@
 }
 
 .loading-bar {
-  margin: auto;
-  width: 50%;
+  margin-top: 50px;
+  margin-left: 350px;
 }
 
 .coin-list-header {
