--- a/cryptotrack/src/components/CoinChart.css
+++ b/cryptotrack/src/components/CoinChart.css
@@ -1,15 +1,17 @@
 .coin-chart {
   height: 500px;
   width: 1000px;
-  margin: auto;
+  margin: 0 auto;
   margin-top: 25px;
   margin-bottom: 50px;
   background-color: #fff;
-  border-radius: 2px;
+  border-radius: 5px;
   border: 1px solid #fff;
   padding-bottom: 65px;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(255,255,255,0.19);
 }
+
+
 
 .history-buttons {
   margin: 10px;
